--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <main>Page Main</main>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet consectetur adipiscing. Platea dictumst vestibulum rhoncus est pellentesque. Amet risus nullam eget felis eget nunc lobortis. Eget arcu dictum varius duis at consectetur lorem donec.
 
-        <img src="images/mini-figure.png" alt="Lego Mini Figure" width="176" height="285">
+        <img src="mini-figure.png" alt="Lego Mini Figure" width="176" height="285">
     </p>
     <p>Arcu felis bibendum ut tristique et egestas quis. Turpis tincidunt id aliquet risus feugiat in ante metus. At imperdiet dui accumsan sit amet nulla facilisi morbi tempus. Arcu cursus euismod quis viverra nibh cras. Nunc mi ipsum faucibus vitae aliquet nec ullamcorper. Aenean sed adipiscing diam donec adipiscing. Luctus venenatis lectus magna fringilla urna porttitor.</p>
    
